fix: update what I'm currently doing

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 <div id=title>
 <h1>Gurpreet Atwal</h1>
 <p id=major>
-University of California, Berkeley
-<br> Electrical Engineering & Computer Science
+Director of Platform Engineering
+<br>@ <a href="https://smartcar.com">Smartcar</a>
+<br>
+<!-- University of California, Berkeley -->
+<!-- <br> Electrical Engineering & Computer Science -->
 <br>
 </p>
 </div>
