chore: remove smartcar

--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
 <div id=picWrap><img id=profilePic src=profile.png alt=image title="Gurpreet Atwal" height=150 width=150 /></div>
 <div id=title>
 <h1>Gurpreet Atwal</h1>
-<p id=major>
-Director of Platform Engineering
-<br>@ <a href="https://smartcar.com">Smartcar</a>
-<br>
-<!-- University of California, Berkeley -->
-<!-- <br> Electrical Engineering & Computer Science -->
-<br>
-</p>
+<p id=major>Tech Consultant</p>
 </div>
 </header>
 <ul>
