chore: update profile image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <main>
 <header>
-<div id=picWrap><img id=profilePic src=profile.png alt=image title="Gurpreet Atwal" height=150 width=150 /></div>
+<div id=picWrap><img id=profilePic src=profile.jpg alt=image title="Gurpreet Atwal" height=150 width=150 /></div>
 <div id=title>
 <h1>Gurpreet Atwal</h1>
 <p id=major>Tech Consultant</p>
